Use external jaxb